# pyto-do

./: LICENSE.md  README.md  pyproject.toml  pytodo.py  setup.py
test/: test_pytodo.py
